--- a/style.css
+++ b/style.css
@@ -1,58 +1,21 @@
-*{
-    background-color: antiquewhite;
-}
-header{
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bolder;
-    font-size: larger;
-    text-decoration: underline;
-}
-footer{
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: smaller;
+body{
+   font-family: 'Kavoon', cursive;
+   background-color: floralwhite; 
 }
 p{
-    font-family: Arial, Helvetica, sans-serif;
-    flex-wrap: wrap;
-    font-size: medium;
-    text-align: center;
-    margin: 5%;
+    align-items: center;
+    justify-content: center;
+    margin: 10%;
+    padding: 5%;
 }
-p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-.box{
-    flex-wrap: wrap;
-    margin: 20px;
+.card-container{
     display: inline-flex;
-    padding-left: 20%;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin: 10%;
+    padding: 5%;
 }
-#box1{
-    width: 400px;
-    height: 400px;
-    border: 2px solid black;
-}
-#box2{
-    width: 400px;
-    height: 400px;
-    border: 2px dotted black;
-}
-#box3{
-    width: 400px;
-    height: 400px;
-    border: 2px dashed black;
-}
-#box4{
-    width: 400px;
-    height: 400px;
-    border: 2px hidden black;
-}
-li{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    display: inline;
-}
-.links{
-    padding-left: 44%;
+.container-fluid {
+    color: aliceblue;
 }
